tests/errors/nosuchwriter.py
"""
site: errorsite
routes:
 - nosuchwriter: /
exports:
 - title: Tango
"""
